z-index fixed

--- a/src/components/bloks/Bloks.scss
+++ b/src/components/bloks/Bloks.scss
@@ -3,23 +3,9 @@
 	display: flex;
 	flex-wrap: wrap;
 	margin: 25px 0 0 0;
-	// position: relative;
-	.bloks__foto__container{
-		flex: 1 1 100%;
-		// position: absolute;
-		height: 300px;
-		background-image: url("../../images/puzzle.jpg");
-		background-position: center;
-		background-repeat: none;
-		background-size: cover;
-		background-attachment: fixed;
-		display: block;
-	}
 	.block--container {
-		z-index: 1;
 		flex: 1 1 100%;
 		height: 300px;
-		// width: 100%;
 		padding: 20px;
 		display: flex;
 		flex-flow: column;
