--- a/src/components/introduction/Introduction.scss
+++ b/src/components/introduction/Introduction.scss
@@ -8,6 +8,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
+	margin-top: 45px;
 	.introdiuction__container{
 		flex: 0 1 50%;
 		max-width: 1600px;
