--- a/src/components/moto/Moto.scss
+++ b/src/components/moto/Moto.scss
@@ -14,6 +14,7 @@
 		color: rgb(62, 61, 61);
 	}
 	&__second-container {
+		z-index: -1;
 		.icon {
 			font-size: 1.7rem;
 			position: relative;
